--- a/server/config.ini
+++ b/server/config.ini
@@ -3,3 +3,10 @@ port = 10010
 max_concurrent = 2
 max_retry = 3
 retry_interval = 5
+
+[database]
+host = 114.212.87.99
+port = 3306
+user = dolphind
+passwd = dolphind
+db = mydatabase
