--- a/server/config.ini
+++ b/server/config.ini
@@ -1,12 +1,12 @@
 [server]
 port = 10010
-max_concurrent = 2
+max_concurrent = 200
 max_retry = 3
 retry_interval = 5
 
 [database]
-host = 114.212.87.99
+host = 127.0.0.1
 port = 3306
 user = dolphind
 passwd = dolphind
-db = mydatabase
+db = dolphin
