--- a/server/config.ini
+++ b/server/config.ini
@@ -5,8 +5,8 @@ max_retry = 3
 retry_interval = 5
 
 [database]
-host = 127.0.0.1
+host = 114.212.82.69
 port = 3306
-user = dolphind
-passwd = dolphind
+user = root
+passwd = 123456
 db = dolphin
