--- a/client/config.ini
+++ b/client/config.ini
@@ -1,3 +1,10 @@
 [client]
 server = 127.0.0.1
 port = 10010
+
+[database]
+host = 114.212.82.69
+port = 3306
+user = root
+passwd = 123456
+db = dolphin
